# ocsinventory-restapi-client

./: README.md  pyproject.toml
src/ocsinventory/restapi/: client.py
