[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = "ocsinventory-restapi-client"
version = "0.2.3"
authors = [
    { name="stitchmeup", email="76218192+stitchmeup@users.noreply.github.com" }
]
description = "A python implementation of a client for OCS Inventory REST API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independant"
]
dependencies = [
    "requests"
]


[project.urls]
"Homepage" = "https://github.com/mlt-kr/ocsinventory-restapi-client"
"Bug Tracker" = "https://github.com/mlt-kr/ocsinventory-restapi-client/issues"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["*"]
namespaces = false